# qwui

./: .gitignore  Dockerfile.go  Dockerfile.rust  Makefile  README.md  docker-compose.yml  index.yaml
.github/workflows/: helm-release.yml  release.yml
dev/: generate-traces.py  generate.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/public/assets/: accessibility.js  analyzeEvent.js  analyze_event.js  apm_trace.js  app_advanced_settings.js  app_agent.js  app_apm.js  app_app_search.js  app_canvas.js  app_code.js  app_cross_cluster_replication.js  app_ems.js  app_filebeat.js  app_fleet.js  app_graph.js  app_grok.js  app_index_pattern.js  app_index_rollup.js  app_logs.js  app_management.js  app_monitoring.js  app_packetbeat.js  app_pipeline.js  app_saved_objects.js  app_search_profiler.js  app_security.js  app_security_analytics.js  app_sql.js  app_workflows.js  arrow_left.js  arrow_right.js  article.js  asterisk.js  bell.js  beta.js  boxes_horizontal.js  branch.js  broom.js  calendar.js  change_point_detection.js  (+207 more)
frontend/scripts/: generate-version.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: ExportCSVModal.css  ExportCSVModal.jsx  ExportProgress.css  ExportProgress.jsx  FieldsSidebar.css  FieldsSidebar.jsx  GraphView.css  (+22 more)
go-backend/: go.mod  go.sum  main.go
go-backend/pattern/: main.go
helm/qwui/: Chart.yaml  values.yaml
k6/: CAPACITY.md  README.md  concurrency-test.js  load-test.js  quick-test.js  spike-test.js  stress-test.js
rust-backend/: Cargo.toml
rust-backend/src/: main.rs
(+6 files in other folders)
