[package]
name = "qwui"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "gzip", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors", "catch-panic"] }
tower-sessions = "0.14"
openidconnect = "3.0"
time = "0.3"
csv = "1.3"
zip = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http-body-util = "0.1"
dotenvy = "0.15"
anyhow = "1.0"
futures = "0.3"
rand = "0.8"
oauth2 = "4.4"
url = "2.5"
chrono = "0.4"
axum-reverse-proxy = "1.0.3"
hyper-util = "0.1.18"
vrl = "0.28.1"
